[project]
name = "okamura-da"
version = "0.1.0"
description = ""
authors = [
    {name = "so-hey",email = "soh.tngt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mecab (>=0.996.11,<0.997.0)",
    "ipadic (>=1.0.0,<2.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
